--- a/knn-pokemon.ipynb
+++ b/knn-pokemon.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 170,
    "id": "7a15e6fe",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 171,
    "id": "16885a7f",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 172,
    "id": "f61276e3",
    "metadata": {},
    "outputs": [
@@ -138,7 +138,7 @@
        "4           1  "
       ]
      },
-     "execution_count": 155,
+     "execution_count": 172,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 173,
    "id": "3a3bf5dd",
    "metadata": {},
    "outputs": [
@@ -159,7 +159,7 @@
        "(1302, 8)"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 173,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 174,
    "id": "37457aa6",
    "metadata": {},
    "outputs": [
@@ -367,7 +367,7 @@
        "4                 0             0            0      5           110.0  "
       ]
      },
-     "execution_count": 157,
+     "execution_count": 174,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 175,
    "id": "27dca719",
    "metadata": {},
    "outputs": [
@@ -388,7 +388,7 @@
        "(1025, 20)"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 175,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 176,
    "id": "339cfb0f",
    "metadata": {},
    "outputs": [
@@ -479,7 +479,7 @@
        "52                   5                  9  Charmeleon   Flame Pokémon"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 176,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 177,
    "id": "76591a9f",
    "metadata": {},
    "outputs": [
@@ -500,7 +500,7 @@
        "(1025, 4)"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 177,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 178,
    "id": "0a3b865d",
    "metadata": {},
    "outputs": [
@@ -696,7 +696,7 @@
        "4            NaN              NaN           NaN             NaN  "
       ]
      },
-     "execution_count": 161,
+     "execution_count": 178,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -707,7 +707,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 179,
+   "id": "d063e673",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1302, 18)"
+      ]
+     },
+     "execution_count": 179,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "species_ids_com_nome = pokemons_species_names['pokemon_species_id'].unique()\n",
+    "pokemons_validos = pokemons[pokemons['species_id'].isin(species_ids_com_nome)]\n",
+    "ids_validos = pokemons_validos['id'].unique()\n",
+    "pokemons_stats = pokemons_stats[pokemons_stats['Pokemon_Id'].isin(ids_validos)]\n",
+    "pokemons_stats.shape\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
    "id": "f46efd8b",
    "metadata": {},
    "outputs": [
@@ -717,7 +742,7 @@
        "(1302, 18)"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 180,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -728,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 181,
    "id": "fb4ebc71",
    "metadata": {},
    "outputs": [
@@ -802,7 +827,7 @@
        "4           5   Fogo       NaN"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 181,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -844,20 +869,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 182,
    "id": "ac2e57a5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Após merge species + names: (1025, 24)\n",
+      "Após merge pokemons + base: (1302, 32)\n",
+      "Após merge com stats: (1302, 50)\n",
+      "Após merge com tipos: (1302, 53)\n"
+     ]
+    }
+   ],
    "source": [
-    "aux_df = pd.merge(pokemons, pokemons_species, left_on='species_id', right_on='id', how='inner')\n",
-    "aux_df = pd.merge(aux_df, pokemons_species_names, left_on='species_id', right_on='pokemon_species_id', how='inner')\n",
-    "aux_df = pd.merge(aux_df, pokemons_stats, left_on='id_x', right_on='Pokemon_Id', how='inner')\n",
-    "aux_df = pd.merge(aux_df, types_pivot, left_on='id_x', right_on='pokemon_id', how='inner')"
+    "df_base = pd.merge(pokemons_species, pokemons_species_names, left_on='id', right_on='pokemon_species_id', how='inner')\n",
+    "print(\"Após merge species + names:\", df_base.shape)\n",
+    "\n",
+    "df_poke = pd.merge(pokemons, df_base, left_on='species_id', right_on='id', how='inner')\n",
+    "print(\"Após merge pokemons + base:\", df_poke.shape)\n",
+    "\n",
+    "df_stats = pd.merge(df_poke, pokemons_stats, left_on='id_x', right_on='Pokemon_Id', how='inner')\n",
+    "print(\"Após merge com stats:\", df_stats.shape)\n",
+    "\n",
+    "aux_df = pd.merge(df_stats, types_pivot, left_on='id_x', right_on='pokemon_id', how='inner')\n",
+    "print(\"Após merge com tipos:\", aux_df.shape)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 183,
    "id": "0811bfe3",
    "metadata": {},
    "outputs": [
@@ -1063,7 +1106,7 @@
        "[5 rows x 53 columns]"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1074,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 184,
    "id": "d9f9ed6b",
    "metadata": {},
    "outputs": [
@@ -1084,7 +1127,7 @@
        "(1302, 53)"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 184,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1095,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 185,
    "id": "6116053f",
    "metadata": {},
    "outputs": [],
@@ -1122,7 +1165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 186,
    "id": "ebf69385",
    "metadata": {},
    "outputs": [
@@ -1145,7 +1188,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 186,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1156,7 +1199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 187,
    "id": "849822e5",
    "metadata": {},
    "outputs": [],
@@ -1165,6 +1208,254 @@
     "           \"is_legendary\", \"is_mythical\", \"genus\", \"Hp_Stat\", \"Attack_Stat\", \n",
     "           \"Defense_Stat\", \"Special_Attack_Stat\", \"Special_Defense_Stat\", \n",
     "           \"Speed_Stat\", \"type_1\", \"type_2\", \"shape\",]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
+   "id": "b117954c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>height</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>base_happiness</th>\n",
+       "      <th>is_baby</th>\n",
+       "      <th>is_legendary</th>\n",
+       "      <th>is_mythical</th>\n",
+       "      <th>genus</th>\n",
+       "      <th>hp_stat</th>\n",
+       "      <th>attack_stat</th>\n",
+       "      <th>defense_stat</th>\n",
+       "      <th>special_attack_stat</th>\n",
+       "      <th>special_defense_stat</th>\n",
+       "      <th>speed_stat</th>\n",
+       "      <th>type_1</th>\n",
+       "      <th>type_2</th>\n",
+       "      <th>shape</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>69</td>\n",
+       "      <td>50</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Seed Pokémon</td>\n",
+       "      <td>45</td>\n",
+       "      <td>49</td>\n",
+       "      <td>49</td>\n",
+       "      <td>65</td>\n",
+       "      <td>65</td>\n",
+       "      <td>45</td>\n",
+       "      <td>Grama</td>\n",
+       "      <td>Venenoso</td>\n",
+       "      <td>Quadrúpede</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>10</td>\n",
+       "      <td>130</td>\n",
+       "      <td>50</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Seed Pokémon</td>\n",
+       "      <td>60</td>\n",
+       "      <td>62</td>\n",
+       "      <td>63</td>\n",
+       "      <td>80</td>\n",
+       "      <td>80</td>\n",
+       "      <td>60</td>\n",
+       "      <td>Grama</td>\n",
+       "      <td>Venenoso</td>\n",
+       "      <td>Quadrúpede</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>50</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Seed Pokémon</td>\n",
+       "      <td>80</td>\n",
+       "      <td>82</td>\n",
+       "      <td>83</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>80</td>\n",
+       "      <td>Grama</td>\n",
+       "      <td>Venenoso</td>\n",
+       "      <td>Quadrúpede</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "      <td>85</td>\n",
+       "      <td>50</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Lizard Pokémon</td>\n",
+       "      <td>39</td>\n",
+       "      <td>52</td>\n",
+       "      <td>43</td>\n",
+       "      <td>60</td>\n",
+       "      <td>50</td>\n",
+       "      <td>65</td>\n",
+       "      <td>Fogo</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Ereto</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>11</td>\n",
+       "      <td>190</td>\n",
+       "      <td>50</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Flame Pokémon</td>\n",
+       "      <td>58</td>\n",
+       "      <td>64</td>\n",
+       "      <td>58</td>\n",
+       "      <td>80</td>\n",
+       "      <td>65</td>\n",
+       "      <td>80</td>\n",
+       "      <td>Fogo</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Ereto</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id  height  weight  base_happiness  is_baby  is_legendary  is_mythical  \\\n",
+       "0   1       7      69              50        0             0            0   \n",
+       "1   2      10     130              50        0             0            0   \n",
+       "2   3      20    1000              50        0             0            0   \n",
+       "3   4       6      85              50        0             0            0   \n",
+       "4   5      11     190              50        0             0            0   \n",
+       "\n",
+       "            genus  hp_stat  attack_stat  defense_stat  special_attack_stat  \\\n",
+       "0    Seed Pokémon       45           49            49                   65   \n",
+       "1    Seed Pokémon       60           62            63                   80   \n",
+       "2    Seed Pokémon       80           82            83                  100   \n",
+       "3  Lizard Pokémon       39           52            43                   60   \n",
+       "4   Flame Pokémon       58           64            58                   80   \n",
+       "\n",
+       "   special_defense_stat  speed_stat type_1    type_2       shape  \n",
+       "0                    65          45  Grama  Venenoso  Quadrúpede  \n",
+       "1                    80          60  Grama  Venenoso  Quadrúpede  \n",
+       "2                   100          80  Grama  Venenoso  Quadrúpede  \n",
+       "3                    50          65   Fogo       NaN       Ereto  \n",
+       "4                    65          80   Fogo       NaN       Ereto  "
+      ]
+     },
+     "execution_count": 188,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_df = aux_df[colunas]\n",
+    "final_df.columns = [\"id\", \"height\", \"weight\", \"base_happiness\", \"is_baby\", \n",
+    "                     \"is_legendary\", \"is_mythical\", \"genus\", \"hp_stat\", \n",
+    "                     \"attack_stat\", \"defense_stat\", \"special_attack_stat\", \n",
+    "                     \"special_defense_stat\", \"speed_stat\", \"type_1\", \n",
+    "                     \"type_2\", \"shape\"]\n",
+    "final_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "id": "666885c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(829, 17)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "caminho_das_imagens = \"../pokemon-vis/assets/pokemons\"\n",
+    "\n",
+    "# Lista para armazenar os IDs válidos\n",
+    "imagens_ids = []\n",
+    "\n",
+    "# Itera sobre os arquivos na pasta\n",
+    "for nome in os.listdir(caminho_das_imagens):\n",
+    "    if nome.endswith(\".png\"):\n",
+    "        try:\n",
+    "            imagens_ids.append(int(nome.replace(\".png\", \"\")))\n",
+    "        except ValueError:\n",
+    "            pass  # ignora arquivos que não seguem o formato numérico\n",
+    "\n",
+    "# Filtra o DataFrame\n",
+    "final_df = final_df[final_df[\"id\"].isin(imagens_ids)]\n",
+    "print(final_df.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "id": "3bb9c86b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# normalizando variaveis numéricas\n",
+    "for col in [\"height\", \"weight\", \"base_happiness\", \"hp_stat\", \n",
+    "            \"attack_stat\", \"defense_stat\", \"special_attack_stat\", \n",
+    "            \"special_defense_stat\", \"speed_stat\"]:\n",
+    "    final_df[col] = round((final_df[col] - final_df[col].mean()) / final_df[col].std(), 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "id": "5aa64d14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_df.to_csv(\"knn_data.csv\", index=False)"
    ]
   }
  ],
