--- a/knn-pokemon.ipynb
+++ b/knn-pokemon.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 255,
    "id": "7a15e6fe",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 256,
    "id": "16885a7f",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 257,
    "id": "f61276e3",
    "metadata": {},
    "outputs": [
@@ -138,7 +138,7 @@
        "4           1  "
       ]
      },
-     "execution_count": 172,
+     "execution_count": 257,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 258,
    "id": "3a3bf5dd",
    "metadata": {},
    "outputs": [
@@ -159,7 +159,7 @@
        "(1302, 8)"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 258,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 259,
    "id": "37457aa6",
    "metadata": {},
    "outputs": [
@@ -367,7 +367,7 @@
        "4                 0             0            0      5           110.0  "
       ]
      },
-     "execution_count": 174,
+     "execution_count": 259,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 260,
    "id": "27dca719",
    "metadata": {},
    "outputs": [
@@ -388,7 +388,7 @@
        "(1025, 20)"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 260,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 261,
    "id": "339cfb0f",
    "metadata": {},
    "outputs": [
@@ -479,7 +479,7 @@
        "52                   5                  9  Charmeleon   Flame Pokémon"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 261,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 262,
    "id": "76591a9f",
    "metadata": {},
    "outputs": [
@@ -500,7 +500,7 @@
        "(1025, 4)"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 262,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 263,
    "id": "0a3b865d",
    "metadata": {},
    "outputs": [
@@ -696,7 +696,7 @@
        "4            NaN              NaN           NaN             NaN  "
       ]
      },
-     "execution_count": 178,
+     "execution_count": 263,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 264,
    "id": "d063e673",
    "metadata": {},
    "outputs": [
@@ -717,7 +717,7 @@
        "(1302, 18)"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 264,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 265,
    "id": "f46efd8b",
    "metadata": {},
    "outputs": [
@@ -742,7 +742,7 @@
        "(1302, 18)"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 265,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -753,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 266,
    "id": "fb4ebc71",
    "metadata": {},
    "outputs": [
@@ -827,7 +827,7 @@
        "4           5   Fogo       NaN"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 266,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -869,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 267,
    "id": "ac2e57a5",
    "metadata": {},
    "outputs": [
@@ -900,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 268,
    "id": "0811bfe3",
    "metadata": {},
    "outputs": [
@@ -1106,7 +1106,7 @@
        "[5 rows x 53 columns]"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 268,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1117,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 269,
    "id": "d9f9ed6b",
    "metadata": {},
    "outputs": [
@@ -1127,7 +1127,7 @@
        "(1302, 53)"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 269,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1138,34 +1138,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 270,
    "id": "6116053f",
    "metadata": {},
    "outputs": [],
    "source": [
     "id_to_shape = {\n",
-    "    1: \"Esférico\",\n",
-    "    2: \"Rabiscado\",\n",
-    "    3: \"Peixe\",\n",
-    "    4: \"Com braços\",\n",
-    "    5: \"Massa informe\",\n",
-    "    6: \"Ereto\",\n",
-    "    7: \"Com pernas\",\n",
-    "    8: \"Quadrúpede\",\n",
-    "    9: \"Com asas\",\n",
-    "    10: \"Com tentáculos\",\n",
-    "    11: \"Com cabeças múltiplas\",\n",
-    "    12: \"Humanoide\",\n",
-    "    13: \"Com asas de inseto\",\n",
-    "    14: \"Com armadura\"\n",
+    "    1: \"Ball\",\n",
+    "    2: \"Squiggle\",\n",
+    "    3: \"Fish\",\n",
+    "    4: \"Arms\",\n",
+    "    5: \"Blob\",\n",
+    "    6: \"Upright\",\n",
+    "    7: \"Legs\",\n",
+    "    8: \"Quadruped\",\n",
+    "    9: \"Wings\",\n",
+    "    10: \"Tentacles\",\n",
+    "    11: \"Heads\",\n",
+    "    12: \"Humanoid\",\n",
+    "    13: \"Bug-Wings\",\n",
+    "    14: \"Armor\"\n",
     "}\n",
-    "\n",
     "aux_df[\"shape\"] = aux_df[\"shape_id\"].map(id_to_shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 271,
    "id": "ebf69385",
    "metadata": {},
    "outputs": [
@@ -1188,7 +1187,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 186,
+     "execution_count": 271,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1199,7 +1198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 272,
    "id": "849822e5",
    "metadata": {},
    "outputs": [],
@@ -1207,12 +1206,12 @@
     "colunas = [\"id_x\", \"height\", \"weight\", \"base_happiness\", \"is_baby\", \n",
     "           \"is_legendary\", \"is_mythical\", \"genus\", \"Hp_Stat\", \"Attack_Stat\", \n",
     "           \"Defense_Stat\", \"Special_Attack_Stat\", \"Special_Defense_Stat\", \n",
-    "           \"Speed_Stat\", \"type_1\", \"type_2\", \"shape\",]"
+    "        \"Speed_Stat\", \"type_1\", \"type_2\", \"shape\", \"name\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 273,
    "id": "b117954c",
    "metadata": {},
    "outputs": [
@@ -1254,6 +1253,7 @@
        "      <th>type_1</th>\n",
        "      <th>type_2</th>\n",
        "      <th>shape</th>\n",
+       "      <th>name</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1275,7 +1275,8 @@
        "      <td>45</td>\n",
        "      <td>Grama</td>\n",
        "      <td>Venenoso</td>\n",
-       "      <td>Quadrúpede</td>\n",
+       "      <td>Quadruped</td>\n",
+       "      <td>Bulbasaur</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1295,7 +1296,8 @@
        "      <td>60</td>\n",
        "      <td>Grama</td>\n",
        "      <td>Venenoso</td>\n",
-       "      <td>Quadrúpede</td>\n",
+       "      <td>Quadruped</td>\n",
+       "      <td>Ivysaur</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1315,7 +1317,8 @@
        "      <td>80</td>\n",
        "      <td>Grama</td>\n",
        "      <td>Venenoso</td>\n",
-       "      <td>Quadrúpede</td>\n",
+       "      <td>Quadruped</td>\n",
+       "      <td>Venusaur</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1335,7 +1338,8 @@
        "      <td>65</td>\n",
        "      <td>Fogo</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Ereto</td>\n",
+       "      <td>Upright</td>\n",
+       "      <td>Charmander</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1355,7 +1359,8 @@
        "      <td>80</td>\n",
        "      <td>Fogo</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Ereto</td>\n",
+       "      <td>Upright</td>\n",
+       "      <td>Charmeleon</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1376,15 +1381,15 @@
        "3  Lizard Pokémon       39           52            43                   60   \n",
        "4   Flame Pokémon       58           64            58                   80   \n",
        "\n",
-       "   special_defense_stat  speed_stat type_1    type_2       shape  \n",
-       "0                    65          45  Grama  Venenoso  Quadrúpede  \n",
-       "1                    80          60  Grama  Venenoso  Quadrúpede  \n",
-       "2                   100          80  Grama  Venenoso  Quadrúpede  \n",
-       "3                    50          65   Fogo       NaN       Ereto  \n",
-       "4                    65          80   Fogo       NaN       Ereto  "
+       "   special_defense_stat  speed_stat type_1    type_2      shape        name  \n",
+       "0                    65          45  Grama  Venenoso  Quadruped   Bulbasaur  \n",
+       "1                    80          60  Grama  Venenoso  Quadruped     Ivysaur  \n",
+       "2                   100          80  Grama  Venenoso  Quadruped    Venusaur  \n",
+       "3                    50          65   Fogo       NaN    Upright  Charmander  \n",
+       "4                    65          80   Fogo       NaN    Upright  Charmeleon  "
       ]
      },
-     "execution_count": 188,
+     "execution_count": 273,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1395,13 +1400,13 @@
     "                     \"is_legendary\", \"is_mythical\", \"genus\", \"hp_stat\", \n",
     "                     \"attack_stat\", \"defense_stat\", \"special_attack_stat\", \n",
     "                     \"special_defense_stat\", \"speed_stat\", \"type_1\", \n",
-    "                     \"type_2\", \"shape\"]\n",
+    "                     \"type_2\", \"shape\", \"name\"]\n",
     "final_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 274,
    "id": "666885c0",
    "metadata": {},
    "outputs": [
@@ -1409,7 +1414,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(829, 17)\n"
+      "(829, 18)\n"
      ]
     }
    ],
@@ -1436,21 +1441,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 275,
    "id": "3bb9c86b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# normalizando variaveis numéricas\n",
     "for col in [\"height\", \"weight\", \"base_happiness\", \"hp_stat\", \n",
     "            \"attack_stat\", \"defense_stat\", \"special_attack_stat\", \n",
     "            \"special_defense_stat\", \"speed_stat\"]:\n",
-    "    final_df[col] = round((final_df[col] - final_df[col].mean()) / final_df[col].std(), 3)"
+    "    final_df[f\"{col}_norm\"] = round((final_df[col] - final_df[col].mean()) / final_df[col].std(), 3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 276,
    "id": "5aa64d14",
    "metadata": {},
    "outputs": [],
