--- a/knn-pokemon.ipynb
+++ b/knn-pokemon.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 225,
    "id": "7a15e6fe",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 226,
    "id": "16885a7f",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 227,
    "id": "f61276e3",
    "metadata": {},
    "outputs": [
@@ -138,7 +138,7 @@
        "4           1  "
       ]
      },
-     "execution_count": 257,
+     "execution_count": 227,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 228,
    "id": "3a3bf5dd",
    "metadata": {},
    "outputs": [
@@ -159,7 +159,7 @@
        "(1302, 8)"
       ]
      },
-     "execution_count": 258,
+     "execution_count": 228,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 229,
    "id": "37457aa6",
    "metadata": {},
    "outputs": [
@@ -367,7 +367,7 @@
        "4                 0             0            0      5           110.0  "
       ]
      },
-     "execution_count": 259,
+     "execution_count": 229,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 230,
    "id": "27dca719",
    "metadata": {},
    "outputs": [
@@ -388,7 +388,7 @@
        "(1025, 20)"
       ]
      },
-     "execution_count": 260,
+     "execution_count": 230,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 231,
    "id": "339cfb0f",
    "metadata": {},
    "outputs": [
@@ -479,7 +479,7 @@
        "52                   5                  9  Charmeleon   Flame Pokémon"
       ]
      },
-     "execution_count": 261,
+     "execution_count": 231,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 232,
    "id": "76591a9f",
    "metadata": {},
    "outputs": [
@@ -500,7 +500,7 @@
        "(1025, 4)"
       ]
      },
-     "execution_count": 262,
+     "execution_count": 232,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 233,
    "id": "0a3b865d",
    "metadata": {},
    "outputs": [
@@ -696,7 +696,7 @@
        "4            NaN              NaN           NaN             NaN  "
       ]
      },
-     "execution_count": 263,
+     "execution_count": 233,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 234,
    "id": "d063e673",
    "metadata": {},
    "outputs": [
@@ -717,7 +717,7 @@
        "(1302, 18)"
       ]
      },
-     "execution_count": 264,
+     "execution_count": 234,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 235,
    "id": "f46efd8b",
    "metadata": {},
    "outputs": [
@@ -742,7 +742,7 @@
        "(1302, 18)"
       ]
      },
-     "execution_count": 265,
+     "execution_count": 235,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -753,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 236,
    "id": "fb4ebc71",
    "metadata": {},
    "outputs": [
@@ -827,7 +827,7 @@
        "4           5   Fogo       NaN"
       ]
      },
-     "execution_count": 266,
+     "execution_count": 236,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -869,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 237,
    "id": "ac2e57a5",
    "metadata": {},
    "outputs": [
@@ -900,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 238,
    "id": "0811bfe3",
    "metadata": {},
    "outputs": [
@@ -1106,7 +1106,7 @@
        "[5 rows x 53 columns]"
       ]
      },
-     "execution_count": 268,
+     "execution_count": 238,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1117,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 239,
    "id": "d9f9ed6b",
    "metadata": {},
    "outputs": [
@@ -1127,7 +1127,7 @@
        "(1302, 53)"
       ]
      },
-     "execution_count": 269,
+     "execution_count": 239,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1138,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 240,
    "id": "6116053f",
    "metadata": {},
    "outputs": [],
@@ -1164,7 +1164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 241,
    "id": "ebf69385",
    "metadata": {},
    "outputs": [
@@ -1187,7 +1187,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 271,
+     "execution_count": 241,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1198,20 +1198,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
-   "id": "849822e5",
+   "execution_count": 242,
+   "id": "c2a7330e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "colunas = [\"id_x\", \"height\", \"weight\", \"base_happiness\", \"is_baby\", \n",
-    "           \"is_legendary\", \"is_mythical\", \"genus\", \"Hp_Stat\", \"Attack_Stat\", \n",
-    "           \"Defense_Stat\", \"Special_Attack_Stat\", \"Special_Defense_Stat\", \n",
-    "        \"Speed_Stat\", \"type_1\", \"type_2\", \"shape\", \"name\"]"
+    "aux_df[\"evolves_from_species_id\"] = aux_df[\"evolves_from_species_id\"].fillna(0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 243,
+   "id": "849822e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "colunas = [\"id_x\", \"height\", \"weight\", \"is_baby\", \n",
+    "           \"is_legendary\", \"is_mythical\", \"Hp_Stat\", \"Attack_Stat\", \n",
+    "           \"Defense_Stat\", \"Special_Attack_Stat\", \"Special_Defense_Stat\", \n",
+    "        \"Speed_Stat\", \"type_1\", \"type_2\", \"shape\", \"name\", \"evolves_from_species_id\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 244,
    "id": "b117954c",
    "metadata": {},
    "outputs": [
@@ -1239,11 +1249,9 @@
        "      <th>id</th>\n",
        "      <th>height</th>\n",
        "      <th>weight</th>\n",
-       "      <th>base_happiness</th>\n",
        "      <th>is_baby</th>\n",
        "      <th>is_legendary</th>\n",
        "      <th>is_mythical</th>\n",
-       "      <th>genus</th>\n",
        "      <th>hp_stat</th>\n",
        "      <th>attack_stat</th>\n",
        "      <th>defense_stat</th>\n",
@@ -1254,6 +1262,7 @@
        "      <th>type_2</th>\n",
        "      <th>shape</th>\n",
        "      <th>name</th>\n",
+       "      <th>evolucao</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1262,11 +1271,9 @@
        "      <td>1</td>\n",
        "      <td>7</td>\n",
        "      <td>69</td>\n",
-       "      <td>50</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>Seed Pokémon</td>\n",
        "      <td>45</td>\n",
        "      <td>49</td>\n",
        "      <td>49</td>\n",
@@ -1277,17 +1284,16 @@
        "      <td>Venenoso</td>\n",
        "      <td>Quadruped</td>\n",
        "      <td>Bulbasaur</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
        "      <td>10</td>\n",
        "      <td>130</td>\n",
-       "      <td>50</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>Seed Pokémon</td>\n",
        "      <td>60</td>\n",
        "      <td>62</td>\n",
        "      <td>63</td>\n",
@@ -1298,17 +1304,16 @@
        "      <td>Venenoso</td>\n",
        "      <td>Quadruped</td>\n",
        "      <td>Ivysaur</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
        "      <td>20</td>\n",
        "      <td>1000</td>\n",
-       "      <td>50</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>Seed Pokémon</td>\n",
        "      <td>80</td>\n",
        "      <td>82</td>\n",
        "      <td>83</td>\n",
@@ -1319,17 +1324,16 @@
        "      <td>Venenoso</td>\n",
        "      <td>Quadruped</td>\n",
        "      <td>Venusaur</td>\n",
+       "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
        "      <td>6</td>\n",
        "      <td>85</td>\n",
-       "      <td>50</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>Lizard Pokémon</td>\n",
        "      <td>39</td>\n",
        "      <td>52</td>\n",
        "      <td>43</td>\n",
@@ -1340,17 +1344,16 @@
        "      <td>NaN</td>\n",
        "      <td>Upright</td>\n",
        "      <td>Charmander</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
        "      <td>11</td>\n",
        "      <td>190</td>\n",
-       "      <td>50</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>Flame Pokémon</td>\n",
        "      <td>58</td>\n",
        "      <td>64</td>\n",
        "      <td>58</td>\n",
@@ -1361,52 +1364,53 @@
        "      <td>NaN</td>\n",
        "      <td>Upright</td>\n",
        "      <td>Charmeleon</td>\n",
+       "      <td>4.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   id  height  weight  base_happiness  is_baby  is_legendary  is_mythical  \\\n",
-       "0   1       7      69              50        0             0            0   \n",
-       "1   2      10     130              50        0             0            0   \n",
-       "2   3      20    1000              50        0             0            0   \n",
-       "3   4       6      85              50        0             0            0   \n",
-       "4   5      11     190              50        0             0            0   \n",
+       "   id  height  weight  is_baby  is_legendary  is_mythical  hp_stat  \\\n",
+       "0   1       7      69        0             0            0       45   \n",
+       "1   2      10     130        0             0            0       60   \n",
+       "2   3      20    1000        0             0            0       80   \n",
+       "3   4       6      85        0             0            0       39   \n",
+       "4   5      11     190        0             0            0       58   \n",
        "\n",
-       "            genus  hp_stat  attack_stat  defense_stat  special_attack_stat  \\\n",
-       "0    Seed Pokémon       45           49            49                   65   \n",
-       "1    Seed Pokémon       60           62            63                   80   \n",
-       "2    Seed Pokémon       80           82            83                  100   \n",
-       "3  Lizard Pokémon       39           52            43                   60   \n",
-       "4   Flame Pokémon       58           64            58                   80   \n",
+       "   attack_stat  defense_stat  special_attack_stat  special_defense_stat  \\\n",
+       "0           49            49                   65                    65   \n",
+       "1           62            63                   80                    80   \n",
+       "2           82            83                  100                   100   \n",
+       "3           52            43                   60                    50   \n",
+       "4           64            58                   80                    65   \n",
        "\n",
-       "   special_defense_stat  speed_stat type_1    type_2      shape        name  \n",
-       "0                    65          45  Grama  Venenoso  Quadruped   Bulbasaur  \n",
-       "1                    80          60  Grama  Venenoso  Quadruped     Ivysaur  \n",
-       "2                   100          80  Grama  Venenoso  Quadruped    Venusaur  \n",
-       "3                    50          65   Fogo       NaN    Upright  Charmander  \n",
-       "4                    65          80   Fogo       NaN    Upright  Charmeleon  "
+       "   speed_stat type_1    type_2      shape        name  evolucao  \n",
+       "0          45  Grama  Venenoso  Quadruped   Bulbasaur       0.0  \n",
+       "1          60  Grama  Venenoso  Quadruped     Ivysaur       1.0  \n",
+       "2          80  Grama  Venenoso  Quadruped    Venusaur       2.0  \n",
+       "3          65   Fogo       NaN    Upright  Charmander       0.0  \n",
+       "4          80   Fogo       NaN    Upright  Charmeleon       4.0  "
       ]
      },
-     "execution_count": 273,
+     "execution_count": 244,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "final_df = aux_df[colunas]\n",
-    "final_df.columns = [\"id\", \"height\", \"weight\", \"base_happiness\", \"is_baby\", \n",
-    "                     \"is_legendary\", \"is_mythical\", \"genus\", \"hp_stat\", \n",
+    "final_df.columns = [\"id\", \"height\", \"weight\", \"is_baby\", \n",
+    "                     \"is_legendary\", \"is_mythical\", \"hp_stat\", \n",
     "                     \"attack_stat\", \"defense_stat\", \"special_attack_stat\", \n",
     "                     \"special_defense_stat\", \"speed_stat\", \"type_1\", \n",
-    "                     \"type_2\", \"shape\", \"name\"]\n",
+    "                     \"type_2\", \"shape\", \"name\", \"evolucao\"]\n",
     "final_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 245,
    "id": "666885c0",
    "metadata": {},
    "outputs": [
@@ -1414,7 +1418,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(829, 18)\n"
+      "(829, 17)\n"
      ]
     }
    ],
@@ -1441,12 +1445,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 246,
    "id": "3bb9c86b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for col in [\"height\", \"weight\", \"base_happiness\", \"hp_stat\", \n",
+    "for col in [\"height\", \"weight\", \"hp_stat\", \n",
     "            \"attack_stat\", \"defense_stat\", \"special_attack_stat\", \n",
     "            \"special_defense_stat\", \"speed_stat\"]:\n",
     "    final_df[f\"{col}_norm\"] = round((final_df[col] - final_df[col].mean()) / final_df[col].std(), 3)"
@@ -1454,7 +1458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 247,
    "id": "5aa64d14",
    "metadata": {},
    "outputs": [],
