adicionando novamente o genus no knn

--- a/knn-pokemon.ipynb
+++ b/knn-pokemon.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 24,
    "id": "7a15e6fe",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 25,
    "id": "16885a7f",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 26,
    "id": "f61276e3",
    "metadata": {},
    "outputs": [
@@ -138,7 +138,7 @@
        "4           1  "
       ]
      },
-     "execution_count": 227,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 27,
    "id": "3a3bf5dd",
    "metadata": {},
    "outputs": [
@@ -159,7 +159,7 @@
        "(1302, 8)"
       ]
      },
-     "execution_count": 228,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 28,
    "id": "37457aa6",
    "metadata": {},
    "outputs": [
@@ -367,7 +367,7 @@
        "4                 0             0            0      5           110.0  "
       ]
      },
-     "execution_count": 229,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 29,
    "id": "27dca719",
    "metadata": {},
    "outputs": [
@@ -388,7 +388,7 @@
        "(1025, 20)"
       ]
      },
-     "execution_count": 230,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 30,
    "id": "339cfb0f",
    "metadata": {},
    "outputs": [
@@ -479,7 +479,7 @@
        "52                   5                  9  Charmeleon   Flame Pokémon"
       ]
      },
-     "execution_count": 231,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 31,
    "id": "76591a9f",
    "metadata": {},
    "outputs": [
@@ -500,7 +500,7 @@
        "(1025, 4)"
       ]
      },
-     "execution_count": 232,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 32,
    "id": "0a3b865d",
    "metadata": {},
    "outputs": [
@@ -696,7 +696,7 @@
        "4            NaN              NaN           NaN             NaN  "
       ]
      },
-     "execution_count": 233,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 33,
    "id": "d063e673",
    "metadata": {},
    "outputs": [
@@ -717,7 +717,7 @@
        "(1302, 18)"
       ]
      },
-     "execution_count": 234,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 34,
    "id": "f46efd8b",
    "metadata": {},
    "outputs": [
@@ -742,7 +742,7 @@
        "(1302, 18)"
       ]
      },
-     "execution_count": 235,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -753,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 35,
    "id": "fb4ebc71",
    "metadata": {},
    "outputs": [
@@ -827,7 +827,7 @@
        "4           5   Fogo       NaN"
       ]
      },
-     "execution_count": 236,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -869,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 36,
    "id": "ac2e57a5",
    "metadata": {},
    "outputs": [
@@ -900,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 37,
    "id": "0811bfe3",
    "metadata": {},
    "outputs": [
@@ -1106,7 +1106,7 @@
        "[5 rows x 53 columns]"
       ]
      },
-     "execution_count": 238,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1117,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 38,
    "id": "d9f9ed6b",
    "metadata": {},
    "outputs": [
@@ -1127,7 +1127,7 @@
        "(1302, 53)"
       ]
      },
-     "execution_count": 239,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1138,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 39,
    "id": "6116053f",
    "metadata": {},
    "outputs": [],
@@ -1164,7 +1164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 40,
    "id": "ebf69385",
    "metadata": {},
    "outputs": [
@@ -1187,7 +1187,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 241,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1198,7 +1198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 41,
    "id": "c2a7330e",
    "metadata": {},
    "outputs": [],
@@ -1208,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 42,
    "id": "849822e5",
    "metadata": {},
    "outputs": [],
@@ -1216,12 +1216,12 @@
     "colunas = [\"id_x\", \"height\", \"weight\", \"is_baby\", \n",
     "           \"is_legendary\", \"is_mythical\", \"Hp_Stat\", \"Attack_Stat\", \n",
     "           \"Defense_Stat\", \"Special_Attack_Stat\", \"Special_Defense_Stat\", \n",
-    "        \"Speed_Stat\", \"type_1\", \"type_2\", \"shape\", \"name\", \"evolves_from_species_id\"]"
+    "        \"Speed_Stat\", \"type_1\", \"type_2\", \"shape\", \"name\", \"evolves_from_species_id\", \"genus\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 43,
    "id": "b117954c",
    "metadata": {},
    "outputs": [
@@ -1263,6 +1263,7 @@
        "      <th>shape</th>\n",
        "      <th>name</th>\n",
        "      <th>evolucao</th>\n",
+       "      <th>genus</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1285,6 +1286,7 @@
        "      <td>Quadruped</td>\n",
        "      <td>Bulbasaur</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>Seed Pokémon</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1305,6 +1307,7 @@
        "      <td>Quadruped</td>\n",
        "      <td>Ivysaur</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>Seed Pokémon</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1325,6 +1328,7 @@
        "      <td>Quadruped</td>\n",
        "      <td>Venusaur</td>\n",
        "      <td>2.0</td>\n",
+       "      <td>Seed Pokémon</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1345,6 +1349,7 @@
        "      <td>Upright</td>\n",
        "      <td>Charmander</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>Lizard Pokémon</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1365,6 +1370,7 @@
        "      <td>Upright</td>\n",
        "      <td>Charmeleon</td>\n",
        "      <td>4.0</td>\n",
+       "      <td>Flame Pokémon</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1385,15 +1391,22 @@
        "3           52            43                   60                    50   \n",
        "4           64            58                   80                    65   \n",
        "\n",
-       "   speed_stat type_1    type_2      shape        name  evolucao  \n",
-       "0          45  Grama  Venenoso  Quadruped   Bulbasaur       0.0  \n",
-       "1          60  Grama  Venenoso  Quadruped     Ivysaur       1.0  \n",
-       "2          80  Grama  Venenoso  Quadruped    Venusaur       2.0  \n",
-       "3          65   Fogo       NaN    Upright  Charmander       0.0  \n",
-       "4          80   Fogo       NaN    Upright  Charmeleon       4.0  "
+       "   speed_stat type_1    type_2      shape        name  evolucao  \\\n",
+       "0          45  Grama  Venenoso  Quadruped   Bulbasaur       0.0   \n",
+       "1          60  Grama  Venenoso  Quadruped     Ivysaur       1.0   \n",
+       "2          80  Grama  Venenoso  Quadruped    Venusaur       2.0   \n",
+       "3          65   Fogo       NaN    Upright  Charmander       0.0   \n",
+       "4          80   Fogo       NaN    Upright  Charmeleon       4.0   \n",
+       "\n",
+       "            genus  \n",
+       "0    Seed Pokémon  \n",
+       "1    Seed Pokémon  \n",
+       "2    Seed Pokémon  \n",
+       "3  Lizard Pokémon  \n",
+       "4   Flame Pokémon  "
       ]
      },
-     "execution_count": 244,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1404,13 +1417,37 @@
     "                     \"is_legendary\", \"is_mythical\", \"hp_stat\", \n",
     "                     \"attack_stat\", \"defense_stat\", \"special_attack_stat\", \n",
     "                     \"special_defense_stat\", \"speed_stat\", \"type_1\", \n",
-    "                     \"type_2\", \"shape\", \"name\", \"evolucao\"]\n",
+    "                     \"type_2\", \"shape\", \"name\", \"evolucao\", \"genus\"]\n",
     "final_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 47,
+   "id": "f4716387",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "is_legendary\n",
+       "0    775\n",
+       "1     54\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_df[\"is_legendary\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "id": "666885c0",
    "metadata": {},
    "outputs": [
@@ -1418,7 +1455,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(829, 17)\n"
+      "(829, 18)\n"
      ]
     }
    ],
@@ -1445,7 +1482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 45,
    "id": "3bb9c86b",
    "metadata": {},
    "outputs": [],
@@ -1458,7 +1495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 46,
    "id": "5aa64d14",
    "metadata": {},
    "outputs": [],
